# rust_template

./: Cargo.toml  Dockerfile  rustfmt.toml  test.http
configuration/: base.yaml
examples/: serde_demo.rs
logs/: debug.log.2025-06-19  error.log.2025-06-19  info.log.2025-06-19
src/: configuration.rs  entity.rs  error.rs  lib.rs  main.rs  middleware.rs  route.rs  startup.rs  telemetry.rs  util.rs
src/configuration/: application.rs  database.rs  environment.rs  logging.rs
src/entity/: subscriptions.rs
src/middleware/: print_request_and_reponse.rs
src/route/: admin.rs  order_detail.rs  translate.rs
src/route/translate/: pdd.rs
